# Entasy

./: .gitignore  AUTHORS  CONTRIBUTORS  INSTALL  LICENSE  Makefile  Makefile.am  README.md  TODO  autogen.sh  configure.ac
data/: prefs.epc
man/: Makefile.am
src/: entasy.h  entasy_cb.c  entasy_control_buttons.c  entasy_control_buttons.h  entasy_flipper.c  entasy_main.c  entasy_sliders.c  entasy_tracklist.c  entasy_tracklist.h
